# procreate-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  release-plz.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-plz.yml
docs/: procreate-format.md
reference_files/: parse-reference.procreate  rgb-appearance.procreate  rgb-preference-display-class.procreate  rgb-preference.procreate  rgb.procreate
reference_files/parse-reference/: manifest.json
scripts/: analyze_crash.py  analyze_icc.py  compare_procreate.py
src/: archive.rs  builder.rs  document.rs  export.rs  import.rs  layer.rs  lib.rs  main.rs  tile.rs
src/encode/: archive_writer.rs  mod.rs  tile_encoder.rs
tests/: import_roundtrip.rs  parse_reference.rs
