[package]
name = "procreate-rs"
version = "0.1.0"
edition = "2021"
description = "Parse Procreate .procreate files into layer images"

[[bin]]
name = "procreate-export"
path = "src/main.rs"

[lib]
name = "procreate"
path = "src/lib.rs"

[dependencies]
# ZIP archive reading
zip = "0.6"
# LZ4 decompression
lz4_flex = "0.11"
# Binary plist / NSKeyedArchiver parsing
plist = "1.6"
# Image encoding (PNG output)
image = "0.24"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Serialization for our output types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
